--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,12 @@ name = "pypi"
 numpy = "==1.22.4"
 pandas = "==1.4.2"
 scikit-learn = "==1.1.1"
+scikit-image = "==0.19.2"
 matplotlib = "==3.5.2"
 torch = "==1.11.0"
 torchvision = "==0.12.0"
+openpyxl = "==3.0.10"
 nd2 = "*"
-openpyxl = "*"
 
 [dev-packages]
 jupyter = "==1.0.0"
