--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ torchvision = "==0.12.0"
 openpyxl = "==3.0.10"
 opencv-python = "==4.6.0.66"
 nd2 = "*"
+nd2reader = "==3.3.0"
 locket = "*"
 pipfile = "*"
 tensorboard = "*"
