--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ scikit-image = "==0.19.2"
 matplotlib = "==3.5.2"
 torch = "==1.11.0"
 torchvision = "==0.12.0"
+torchsummary = "==1.5.1"
 openpyxl = "==3.0.10"
 opencv-python = "==4.6.0.66"
 nd2 = "*"
