--- a/Pipfile
+++ b/Pipfile
@@ -3,14 +3,17 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://download.pytorch.org/whl/cu117"
+verify_ssl = false
+name = "pytorch"
+
 [packages]
 numpy = "==1.23.4"
 pandas = "==1.4.2"
 scikit-learn = "==1.1.1"
 scikit-image = "==0.19.2"
 matplotlib = "==3.5.2"
-torch = "==1.11.0"
-torchvision = "==0.12.0"
 torchsummary = "==1.5.1"
 openpyxl = "==3.0.10"
 opencv-python = "==4.6.0.66"
@@ -19,6 +22,10 @@ nd2reader = "==3.3.0"
 locket = "*"
 pipfile = "*"
 tensorboard = "*"
+install = "*"
+torch = {version="1.13.0", index="pytorch"}
+torchvision = {version="0.14.0", index="pytorch"}
+torchaudio = {version="0.13.0", index="pytorch"}
 
 [dev-packages]
 jupyter = "==1.0.0"
