--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ jupyter = "==1.0.0"
 jupyterlab = "==3.4.2"
 wandb = "==0.12.17"
 tqdm = "==4.64.0"
+ipykernel = "*"
 
 [requires]
 python_version = "3.10.4"
